Fix left margin by using gap value in ul list

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -21,7 +21,9 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  flex: 1;
+  margin: 0;
+  padding: 0;
+  gap: 8px;
 }
 
 a {
@@ -30,5 +32,4 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-  margin: 8px;
 }
